Consistent package name

--- a/vignettes/v4-audit-sampling-prior-distributions.Rmd
+++ b/vignettes/v4-audit-sampling-prior-distributions.Rmd
@@ -19,7 +19,7 @@ knitr::opts_chunk$set(echo = TRUE, fig.height = 4, fig.width = 6)
 library(jfa)
 ```
 
-Bayesian statistics enables the incorporation of existing information into the sampling procedure via the prior distribution. The information in the prior is then revised using the information from a sample to come to an overall conclusion. The use of the prior distribution can potentially decrease the amount of audit work required to achieve the desired assurance, thereby increasing your efficiency as an auditor. For example, when you have information from the auditee's internal controls that indicates a low-risk profile, you may build on this information to require less evidence from substantive testing. Be aware that all information that you incorporate into the statistical analysis should be justified. What information can be incorporated into the prior distribution depends on what type of information is available, the quality of that information, and the situation at hand. When the auditor has decided what kind of information they want to incorporate into a prior distribution, they can use the `auditPrior()` function to calculate the corresponding parameters of the prior distribution. Below we discuss the various types of audit information that `jfa` is able to incorporate into a prior distribution.
+Bayesian statistics enables the incorporation of existing information into the sampling procedure via the prior distribution. The information in the prior is then revised using the information from a sample to come to an overall conclusion. The use of the prior distribution can potentially decrease the amount of audit work required to achieve the desired assurance, thereby increasing your efficiency as an auditor. For example, when you have information from the auditee's internal controls that indicates a low-risk profile, you may build on this information to require less evidence from substantive testing. Be aware that all information that you incorporate into the statistical analysis should be justified. What information can be incorporated into the prior distribution depends on what type of information is available, the quality of that information, and the situation at hand. When the auditor has decided what kind of information they want to incorporate into a prior distribution, they can use the `auditPrior()` function to calculate the corresponding parameters of the prior distribution. Below we discuss the various types of audit information that **jfa** is able to incorporate into a prior distribution.
 
 First, we set some default options for the confidence, performance materiality, the likelihood, and the expected errors in the sample.
 
@@ -32,7 +32,7 @@ expected <- 0.01 # 1% errors expected in sample
 
 ### Default priors (`method = 'default'`)
 
-The default prior distributions are created using `method = 'default'`. `jfa`'s default priors satisfy two criteria: 1) they contain relatively little information about the misstatement parameter and 2) they are proper (i.e., they integrate to 1). These priors are the the gamma(1, 1) distribution as a conjugate prior for the Poisson likelihood, the beta(1, 1) distribution as a conjugate prior for the binomial likelihood, and the beta-binomial(N, 1, 1) distribution as a conjugate prior for the hypergeometric likelihood.
+The default prior distributions are created using `method = 'default'`. **jfa**'s default priors satisfy two criteria: 1) they contain relatively little information about the misstatement parameter and 2) they are proper (i.e., they integrate to 1). These priors are the the gamma(1, 1) distribution as a conjugate prior for the Poisson likelihood, the beta(1, 1) distribution as a conjugate prior for the binomial likelihood, and the beta-binomial(N, 1, 1) distribution as a conjugate prior for the hypergeometric likelihood.
 
 ```{r}
 prior1 <- auditPrior(method = "default", likelihood = likelihood, expected = expected, conf.level = confidence)
