--- a/vignettes/jfa.Rmd
+++ b/vignettes/jfa.Rmd
@@ -18,13 +18,13 @@ vignette: >
 library(jfa)
 ```
 
-Welcome to the 'Get started' vignette of the `jfa` package. `jfa` is an R package that provides Bayesian and classical statistical methods for audit sampling and data auditing. First, the package provides functions for planning, performing, evaluating, and reporting an audit sample compliant with international standards on auditing. Second, the package includes functions for auditing data, such as testing the distribution of first digits of a data set against Benford's law.
+Welcome to the 'Get started' vignette of the **jfa** package. **jfa** is an R package that provides Bayesian and classical statistical methods for audit sampling and data auditing. First, the package provides functions for planning, performing, evaluating, and reporting an audit sample compliant with international standards on auditing. Second, the package includes functions for auditing data, such as testing the distribution of first digits of a data set against Benford's law.
 
 This vignette provides a simple explanation of the functionality in the package. For a more detailed explanation of the functions in the package, see the other vignettes at the [package website](https://koenderks.github.io/).
 
 ## Audit sampling
 
-`jfa` provides a user-friendly interface for statistical audit sampling. The standard audit sampling workflow is divided into four distinct parts: planning a sample, selecting the sample from the population, executing the audit and evaluating the misstatement by extrapolating the errors in the sample to the population.
+**jfa** provides a user-friendly interface for statistical audit sampling. The standard audit sampling workflow is divided into four distinct parts: planning a sample, selecting the sample from the population, executing the audit and evaluating the misstatement by extrapolating the errors in the sample to the population.
 
 <center>
 
@@ -32,11 +32,11 @@ This vignette provides a simple explanation of the functionality in the package.
 
 </center>
 
-See the package vignette [Audit sampling: Get started](https://koenderks.github.io/jfa/articles/v1-audit-sampling.html) for more details about `jfa`'s audit sampling functionality.
+See the package vignette [Audit sampling: Get started](https://koenderks.github.io/jfa/articles/v1-audit-sampling.html) for more details about **jfa**'s audit sampling functionality.
 
 ### Functions and intended usage
 
-To illustrate `jfa` statistical audit sampling functionality, consider the `BuildIt` data set that comes with the package. This data consists of 3500 financial statement line items, each of which has a booked value and (for illustrative purposes) a true (audit) value.
+To illustrate **jfa**'s' statistical audit sampling functionality, consider the `BuildIt` data set that comes with the package. This data consists of 3500 financial statement line items, each of which has a booked value and (for illustrative purposes) a true (audit) value.
 
 ```{r}
 # Load the BuildIt population
@@ -85,7 +85,7 @@ summary(stage4)
 
 The `digit.test()` function can be used to test the distribution of leading or last digits in a variable against a pre-specified distribution (e.g., Benford's law).
 
-See the package vignette [Data auditing: Get started](https://koenderks.github.io/jfa/articles/v8-data-auditing.html) for more details about `jfa`'s data auditing functionality.
+See the package vignette [Data auditing: Get started](https://koenderks.github.io/jfa/articles/v8-data-auditing.html) for more details about **jfa**'s data auditing functionality.
 
 ### Functions and intended usage
 
