--- a/vignettes/v1-audit-sampling.Rmd
+++ b/vignettes/v1-audit-sampling.Rmd
@@ -18,11 +18,11 @@ vignette: >
 library(jfa)
 ```
 
-Welcome to the 'Audit sampling' vignette of the `jfa` package. Here you can find a detailed explanation of the functions in the package that facilitate the statistical audit sampling workflow. Specifically, these functions implement standard audit sampling techniques to calculate sample sizes, select items from a population, and evaluate misstatement in a data sample. The `jfa` package enables users to create a prior probability distribution to perform Bayesian audit sampling using these functions. For more detailed explanations of each function, read the other vignettes on the [package website](https://koenderks.github.io/jfa).
+Welcome to the 'Audit sampling' vignette of the **jfa** package. Here you can find a detailed explanation of the functions in the package that facilitate the statistical audit sampling workflow. Specifically, these functions implement standard audit sampling techniques to calculate sample sizes, select items from a population, and evaluate misstatement in a data sample. The **jfa** package enables users to create a prior probability distribution to perform Bayesian audit sampling using these functions. For more detailed explanations of each function, read the other vignettes on the [package website](https://koenderks.github.io/jfa).
 
 ## 1. Cheat sheet
 
-The cheat sheet below will help you get started with `jfa`'s' intended audit sampling workflow. You can download a `pdf` version of the cheat sheet [here](https://github.com/koenderks/jfa/raw/development/man/figures/cheatsheet/cheatsheet.pdf).
+The cheat sheet below will help you get started with **jfa**'s' intended audit sampling workflow. You can download a `pdf` version of the cheat sheet [here](https://github.com/koenderks/jfa/raw/development/man/figures/cheatsheet/cheatsheet.pdf).
 
 <p align='center'><img src='https://github.com/koenderks/jfa/raw/development/man/figures/cheatsheet/cheatsheet.png' alt='cheatsheet' width='1000'></p>
 
@@ -30,7 +30,7 @@ The cheat sheet below will help you get started with `jfa`'s' intended audit sam
 
 <p align='center'><img src='https://github.com/koenderks/jfa/raw/development/man/figures/readme/banner/jfaBanner.png' alt='banner'/></p>
 
-Below you can find an explanation of the available functions in `jfa` sorted by their occurrence in the standard audit sampling workflow.
+Below you can find an explanation of the available functions in **jfa** sorted by their occurrence in the standard audit sampling workflow.
 
 - [`auditPrior()`](#create-a-prior-distribution-with-auditprior)
 - [`planning()`](#plan-a-sample-with-planning)
@@ -252,7 +252,7 @@ For an example report, see the following [link](https://github.com/koenderks/jfa
 
 ## 3. Benchmarks
 
-To validate the statistical results, `jfa`'s automated [unit tests](https://github.com/koenderks/jfa/tree/development/tests/testthat) regularly verify the main output from the package against the following benchmarks:
+To validate the statistical results, **jfa**'s automated [unit tests](https://github.com/koenderks/jfa/tree/development/tests/testthat) regularly verify the main output from the package against the following benchmarks:
 
 - [Audit Sampling: Audit Guide](https://www.aicpa.org/cpe-learning/publication/audit-sampling-audit-guide-OPL) (Appendix A and Appendix C)
 - [AuditSampler](https://cplusglobal.wordpress.com/solutions/auditsampler-statistical-sampling-software/)
