--- a/vignettes/v1-audit-sampling.Rmd
+++ b/vignettes/v1-audit-sampling.Rmd
@@ -188,8 +188,8 @@ evaluation(materiality = NULL, min.precision = NULL, method = c(
              "direct", "difference", "quotient", "regression", "mpu"
            ), alternative = c("less", "two.sided", "greater"), conf.level = 0.95,
            data = NULL, values = NULL, values.audit = NULL, strata = NULL, times = NULL,
-           x = NULL, n = NULL, N.units = NULL, N.items = NULL, pool = FALSE,
-           r.delta = 2.7, m.type = "accounts", cs.a = 1, cs.b = 3, cs.mu = 0.5,
+           x = NULL, n = NULL, N.units = NULL, N.items = NULL,
+           pooling = c("none", "complete", "partial"), 
            prior = FALSE)
 ```
 
