--- a/vignettes/v7-audit-sampling-evaluation.Rmd
+++ b/vignettes/v7-audit-sampling-evaluation.Rmd
@@ -26,36 +26,51 @@ library(jfa)
 
 </center>
 
-This vignette outlines the most commonly used sample evaluation methodology for auditing and shows how to evaluate a sample using the `evaluation()` function in the **jfa** package.
+This vignette outlines the most commonly used sample evaluation methodology for auditing and shows how to evaluate a sample using 
+the `evaluation()` function in the **jfa** package. Evaluating an audit sample using `evaluation()` requires that the data from the 
+sample is accessible in one of two forms:
 
-## Evaluation of non-stratified samples
+- Summary statistics of the sample, including (a vector of) the number of items (`n`), (a vector of) the sum of errors / taints 
+  (`x`) and optionally (a vector of) the number of units in the population (`N.units`).
+- A `data.frame` containing a numeric column with book values, a numeric column with audit (true) values and optionally a factor 
+  column indicating stratum membership.
 
-A non-stratified sample evaluation applies when the population is not divided into distinct groups of items (i.e, strata).
-
-### Hypothesis testing
-
-In an audit sampling test the auditor generally assigns performance materiality, $\theta_{max}$, to the population which expresses the maximum tolerable misstatement (as a fraction or a monetary amount). The auditor then inspects a sample of the population to make a decision between the following two hypotheses:
+Typically in audit sampling there is a maximum tolerable error that applies to the population, the performance $\theta_{max}$, which 
+should be expressed as a fraction using the `materiality` argument. Next to estimation which is performed by default, specifying 
+`materiality` enables the comparison of two competing hypotheses:
 
 $$H_1:\theta<\theta_{max}\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\,\, H_0:\theta\geq\theta_{max}$$. 
 
-The `evaluation()` function allows you to make a statement about the credibility of these two hypotheses after inspecting a sample. Note that this requires that you specify the `materiality` argument in the function.
+## Evaluation using summary statistics
 
-#### Classical hypothesis testing using the *p*-value
+### Non-stratified samples
 
-Classical hypothesis testing uses the *p* value to make a decision about whether to reject the hypothesis $H_0$ or not. As an example, consider that an auditor wants to verify whether the population contains less than 5 percent misstatement, implying the hypotheses $H_1:\theta<0.05$ and $H_0:\theta\geq0.05$. They have taken a sample of 100 items, of which 1 contained an error. They set the significance level for the *p* value to 0.05, implying that a *p* value < 0.05 will be enough to reject the hypothesis $H_0$.
+A non-stratified sample evaluation applies when the population is not divided into distinct groups of items (i.e, strata).
+
+#### Classical evaluation using the *p*-value
+
+Classical hypothesis testing uses the *p*-value to make a decision about whether to reject the hypothesis $H_0$ or not. As an example, 
+consider that an auditor wants to verify whether the population contains less than 5 percent misstatement, implying the hypotheses 
+$H_1:\theta<0.05$ and $H_0:\theta\geq0.05$. They have taken a sample of 100 items, of which 1 contained an error. They set the 
+significance level for the *p* value to 0.05, implying that a *p* value < 0.05 will be enough to reject the hypothesis $H_0$.
 
 ```{r}
-result_classical <- evaluation(materiality = 0.05, x = 1, n = 100)
-summary(result_classical)
+evaluation(materiality = 0.05, x = 1, n = 100)
 ```
 
-As we can see, the *p* value is lower than 0.05 implying that the hypothesis $H_0$ is rejected.
+The output shows that the most likely error in the population is estimated to be 1 / 100 = 1% and that the 95% (one-sided) confidence 
+interval ranges from 0% to 4.74%. The output also shows that the *p*-value is lower than 0.05 implying that the hypothesis $H_0$ can be rejected and that the sample provides sufficient evidence to conclude that the population does not contain material misstatement.
 
-#### Bayesian hypothesis testing using the Bayes factor
+#### Bayesian evaluation using the Bayes factor
 
-Bayesian hypothesis testing uses the Bayes factor, $BF_{10}$ or $BF_{01}$, to make a statement about the evidence provided by the sample in support for one of the two hypotheses $H_1$ or $H_0$. The subscript The Bayes factor denotes which hypothesis it favors. By default, the `evaluation()` function returns the value for $BF_{10}$.
+Bayesian hypothesis testing uses the Bayes factor, $BF_{10}$ or $BF_{01}$, to make a statement about the evidence provided by the 
+sample in support for one of the two hypotheses $H_1$ or $H_0$. The subscript The Bayes factor denotes which hypothesis it favors. 
+By default, the `evaluation()` function returns the value for $BF_{10}$.
 
-As an example of how to interpret the Bayes factor, the value of $BF_{10} = 10$ (provided by the `evaluation()` function) can be interpreted as: *the data are 10 times more likely to have occurred under the hypothesis $H_1:\theta<\theta_{max}$ than under the hypothesis $H_0:\theta\geq\theta_{max}$*. $BF_{10} > 1$ indicates evidence for $H_1$, while $BF_{10} < 1$ indicates evidence for $H_0$. 
+As an example of how to interpret the Bayes factor, the value of $BF_{10} = 10$ (provided by the `evaluation()` function) can be 
+interpreted as: *the data are 10 times more likely to have occurred under the hypothesis $H_1:\theta<\theta_{max}$ than under the 
+hypothesis $H_0:\theta\geq\theta_{max}$*. $BF_{10} > 1$ indicates evidence for $H_1$, while $BF_{10} < 1$ indicates evidence for 
+$H_0$. 
 
 | $BF_{10}$ | Strength of evidence |
 |---------|-------|
@@ -71,67 +86,53 @@ As an example of how to interpret the Bayes factor, the value of $BF_{10} = 10$ 
 | $30 - 100$ | Very strong evidence for $H_1$ |
 | $> 100$ | Extreme evidence for $H_1$ |
 
-Consider the previous example of an auditor who wants to verify whether the population contains less than 5 percent misstatement, implying the hypotheses $H_1:\theta<0.05$ and $H_0:\theta\geq0.05$. They have taken a sample of 100 items, of which 1 contained an error. The prior distribution is assumed to be a default *beta(1,1)* prior. 
-
-The output below shows that $BF_{10}=515$, implying that there is extreme evidence for $H_1$, the hypothesis that the population contains misstatements lower than 5 percent of the population. 
+Consider the previous example of an auditor who wants to verify whether the population contains less than 5 percent misstatement, 
+implying the hypotheses $H_1:\theta<0.05$ and $H_0:\theta\geq0.05$. They have taken a sample of 100 items, of which 1 was found to 
+contain a misstatement. The prior distribution is assumed to be **jfa**'s default *beta(1,1)* prior.
 
 ```{r}
 prior <- auditPrior(materiality = 0.05, method = "default", likelihood = "binomial")
-result_bayesian <- evaluation(materiality = 0.05, x = 1, n = 100, prior = prior)
-summary(result_bayesian)
+evaluation(materiality = 0.05, x = 1, n = 100, prior = prior)
 ```
 
-Note that, in audit sampling, the Bayes factor is dependent on the prior distribution for $\theta$. As a rule of thumb, when the prior distribution is very uninformative (as with `method = 'default'`) with respect to $\theta$, the Bayes factor tends to overquantify the evidence in favor of $H_1$. You can mitigate this dependency using `method = "impartial"` in the `auditPrior()` function, which constructs a prior distribution that is impartial with respect to the hypotheses $H_1$ and $H_0$.
+The output shows that the most likely error in the population is estimated to be 1 / 100 = 1% and that the 95% (one-sided) credible 
+interval ranges from 0% to 4.61%. The Bayes factor is shown to be $BF_{10}=515$, meaning that the data from the sample are 515 times 
+more likely to occur under the hypothesis of no material misstatement than under the hypothesis of material misstatement.
 
-The output below shows that $BF_{10}=47$, implying that there is strong evidence for $H_1$, the hypothesis that the population contains misstatements lower than 5 percent of the population. Since the two priors both resulted in convincing Bayes factors, the results are robust to the choice of prior distribution.
+Note that, in audit sampling, the Bayes factor is dependent on the prior distribution for $\theta$. As a rule of thumb, when the 
+prior distribution is very uninformative (as with `method = 'default'`) with respect to $\theta$, the Bayes factor tends to 
+overquantify the evidence in favor of $H_1$. You can mitigate this dependency using `method = "impartial"` in the `auditPrior()` 
+function, which constructs a prior distribution that is impartial with respect to the hypotheses $H_1$ and $H_0$.
 
 ```{r}
 prior <- auditPrior(materiality = 0.05, method = "impartial", likelihood = "binomial")
-result_bayesian <- evaluation(materiality = 0.05, x = 1, n = 100, prior = prior)
-summary(result_bayesian)
+evaluation(materiality = 0.05, x = 1, n = 100, prior = prior)
 ```
 
-### Estimation
+The output shows that $BF_{10}=47$, implying that there is strong evidence for $H_1$, the hypothesis that the population 
+contains misstatements lower than 5 percent of the population. Since the two priors both resulted in convincing Bayes factors, the 
+results can be considered robust to the choice of prior distribution.
 
-When performing estimation the auditor tries to determine the unknown misstatement in the population on the basis of a sample. Generally, estimation implies that there is a minimal amount of assurance to be obtained about the precision / accuracy of your estimate (i.e., the most likely error - the upper bound). This inference about the population misstatement can be performed using the `evaluation()` function by specifying the `min.precision` argument and providing the sample data or summary statistics.
+### Stratified samples
 
-#### Classical estimation
-
-Suppose your sampling objective is to estimate the misstatement with a precision of 2%. You have planned a sample of *n* = 188 items from which *x* = 1 turns out a contain an error. Standard classical evaluation using the Poisson distribution can be performed using the example code below. Calling the `summary()` function on the result from the `evaluation()` function provides the estimates for the most likely error, the 95% upper bound, and the precision.
-
-```{r}
-result_classical <- evaluation(min.precision = 0.02, method = "poisson", n = 188, x = 1)
-summary(result_classical)
-```
-
-As we can see, the most likely error in the population is 1 / 188 = 0.53% and the 95% (one-sided) confidence interval ranges from 0% to 2.52%. Consequently, the precision of the estimate is 2.52% - 0.53% = 1.99%. This means that this sample provides sufficient information to estimate the misstatement in the population with a precision of 2%.
-
-#### Bayesian estimation
-
-In principle Bayesian estimation follows the same procedure as its classical counterpart, with the exception that a prior distribution must be provided to the `evaluation()` function. Therefore, the first step is to set up a prior distribution (see also the vignette [Prior distributions](https://koenderks.github.io/jfa/articles/v3_prior_distributions.html)). For illustration, we will assume a `default` *gamma(1, 1)* prior distribution. The sample outcomes together with the prior distribution can then be provided to the evaluation function. Once again, the `summary()` function provides the estimates for the most likely error, the 95% upper bound, and the precision. Note that, because the prior is already constructed for use with a `poisson` likelihood, the `method` argument does not need to be provided to the `evaluation()` function.
-
-```{r}
-prior <- auditPrior(method = "default", likelihood = "poisson")
-result_bayesian <- evaluation(min.precision = 0.02, n = 188, x = 1, prior = prior)
-summary(result_bayesian)
-```
-
-As we can see, the posterior distribution is a *gamma(2, 189)* distribution. This distribution implies a most likely error in the population is 0.53% and a 95% (one-sided) confidence interval that ranges from 0% to 2.51%. Consequently, the precision of the estimate is 2.51% - 0.53% = 1.98%. Also in the Bayesian framework, this sample provides sufficient information to estimate the misstatement in the population with a precision of 2%.
-
-## Evaluation of stratified samples
-
-A stratified sample evaluation applies when the population is divided into distinct groups of items (i.e, strata). For illustrative purposes, we do not show both classical and Bayesian procedures but the syntax remains the same.
+A stratified sample evaluation applies when the population is divided into distinct groups of items (i.e, strata). For illustrative 
+purposes, this vignette only describes the Bayesian approach but going to a classical approach only requires `prior = FALSE`.
 
 ```{r}
 data(retailer)
 print(retailer)
 ```
 
-Typically, there are 3 approaches to evaluating a stratified sample: no pooling, complete pooling, and partial pooling (see Derks et al., 2022). No pooling assumes no similarities between strata, which means that all data must be analyzed independently on the level of the strata. Complete pooling assumes no difference between strata and all data is aggregated so that it can be analyzed as a whole. Partial pooling assumes differences and similarities between strata, which enables information to be shared between strata. 
+Typically, there are three approaches to evaluating a stratified sample: no pooling, complete pooling, and partial pooling (see Derks et 
+al., 2022). No pooling assumes no similarities between strata, which means that all data must be analyzed independently on the level 
+of the strata. Complete pooling assumes no difference between strata and all data is aggregated so that it can be analyzed as a whole. 
+Partial pooling assumes differences and similarities between strata, which enables information to be shared between strata. 
 
-### Approach 1: No pooling
+#### Approach 1: No pooling
 
-No pooling assumes no similarities between strata. This allows the auditor to differentiate between strata, which means that a stratum specific conclusion is possible. However, because all strata are assumed to be independent, this increases the uncertainty of the population estimate.
+No pooling assumes no similarities between strata. This allows the auditor to differentiate between strata, which means that a 
+stratum specific conclusion is possible. However, because all strata are assumed to be independent, this increases the uncertainty 
+of the population estimate.
 
 ```{r}
 set.seed(1) # Important because the posterior distribution is determined via sampling
@@ -153,7 +154,7 @@ graphics::arrows(x0 = 1:20, x1 = 1:20, y0 = result_np$strata$lb, y1 = result_np$
 graphics::arrows(x0 = 1:20, x1 = 1:20, y1 = result_np$strat$lb, y0 = result_np$strata$ub, angle = 90, length = 0.05)
 ```
 
-### Approach 2: Complete pooling
+#### Approach 2: Complete pooling
 
 Complete pooling assumes no differences between strata. This has the advantages that data can be aggregated, which decreases the uncertainty of the population estimate. However, the disadvantage of this approach is that it does not allow the auditor to differentiate between strata, as every stratum receives the same estimate (equal to the population estimate).
 
@@ -176,7 +177,7 @@ graphics::arrows(x0 = 1:20, x1 = 1:20, y0 = result_cp$strata$lb, y1 = result_cp$
 graphics::arrows(x0 = 1:20, x1 = 1:20, y1 = result_cp$strata$lb, y0 = result_cp$strata$ub, angle = 90, length = 0.05)
 ```
 
-### Approach 3: Partial pooling
+#### Approach 3: Partial pooling
 
 Finally, partial pooling assumes differences and similarities between strata. This allows the auditor to differentiate between strata, while also retaining the decreased uncertainty obtained by aggregating information. Partial pooling is a powerful technique that can result in more efficient population and stratum estimates.
 
@@ -199,6 +200,10 @@ graphics::axis(side = 2, at = seq(0, 0.50, length.out = 6), las = 1)
 graphics::arrows(x0 = 1:20, x1 = 1:20, y0 = result_pp$strata$lb, y1 = result_pp$strata$ub, angle = 90, length = 0.05)
 graphics::arrows(x0 = 1:20, x1 = 1:20, y1 = result_pp$strat$lb, y0 = result_pp$strata$ub, angle = 90, length = 0.05)
 ```
+
+## Evaluation using data
+
+
 
 ## References
 
